# eve-launcher-sciter

./: .directory  .gitignore  CMakeLists.txt  README.md  eve-launcher-sciter.cbp  eve-launcher-sciter.depend  eve-launcher-sciter.kdev4
src/: main.cpp  resources.cpp
ui/: main.htm  main.js  style.css
web/api/: api.php
